# WT99C202_C302

./: .gitignore  CMakeLists.txt  readme.md  sdkconfig  sdkconfig.c2  sdkconfig.defaults  sdkconfig.old
components/WT99C202_C302/: qmsd_board_pin.h
components/aiha_server/: CMakeLists.txt
components/aiha_server/include/: aiha_websocket.h
components/audio_player/: CMakeLists.txt
components/audio_player/include/: audio_player_user.h
components/ci1302_protocol/: CMakeLists.txt  ci1302.h  ci1302_protocol.h
components/ci1302_protocol/tools/: gx8006_debug.py
components_adf/audio_hal/: CMakeLists.txt
components_adf/audio_stream/: http_stream.c  i2s_stream_idf5.c  pwm_stream.c  tone_stream.c
components_adf/esp_peripherals/: periph_ws2812.c
components_adf/wifi_service/: CMakeLists.txt
main/: CMakeLists.txt  idf_component.yml  main.c
main/battery/: bat.c  bat.h  bat_status.c  bat_status.h
main/chat/: aiha_ai_chat.c  aiha_ai_chat.h  chat_asr_ctrl.c
main/chat_notify/: chat_notify.c  chat_notify.h  chat_notify_list.c
qmsd_esp32_sdk/components/qmsd_network/provisioning/blufi/: blufi_host.c  qmsd_prov_blufi.c
qmsd_esp32_sdk/tools/: release_components.py
